# meowbot

./: .gitignore  README.md  package.json
.github/workflows/: black.yml  build.yml  deploy-cloud-function.yml  format.yml  tweet.yml
models/: .gitignore  README.md  requirements.txt
models/functions/: README.md  main.py  requirements.txt  utils.py
models/notebooks/: aitextgen-fine-tuning.ipynb
models/scripts/: clean.py  config.ini.sample  gentext.py
sentiment-bot/: .gitignore  README.md  config.sample.ini  pyproject.toml
sentiment-bot/sentiment_bot/: api.py  config.py  listener.py  main.py  ml.py  utils.py
sentiment-bot/src/: api.py  main.py  utils.py
sentiment-bot/tests/: test_sentiment_bot.py
src/: index.ts
