[tool.poetry]
name = "sentiment-bot"
version = "0.1.0"
description = ""
authors = ["khuynh <hkennyv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
transformers = "^4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"
flake8 = "^3.9.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
